--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,43 @@
     <string name="sign_in">Đăng nhập</string>
     <string name="enter_password_again">Nhập lại mật khẩu</string>
     <string name="send_new_password">Gửi mật khẩu mới</string>
+    <string name="select_location">Chọn địa chỉ</string>
+    <string name="my_favorite_locations">Địa chỉ yêu thích</string>
+    <string name="setting">Cài đặt</string>
+    <string name="temperature_description">Chọn thời điểm có nhiệt độ dễ chịu (18°C - 25°C là lý tưởng).\nNếu nhiệt độ dưới 15°C, chuẩn bị áo ấm hoặc khăn choàng để tránh cảm lạnh.\nTránh đi khi nhiệt độ quá cao (trên 35°C), vì nóng bức sẽ làm bạn khó chịu và dễ mất nước.</string>
+    <string name="temperature">Nhiệt độ</string>
+    <string name="air_condition">Chất lượng không khí</string>
+    <string name="cloud">Mây</string>
+    <string name="rain">Mưa</string>
+    <string name="humidity">Độ ẩm</string>
+    <string name="air_conditional_description">Tránh các ngày có chỉ số AQI trên 100 (ô nhiễm trung bình) vì bụi mịn và khí độc sẽ làm giảm tầm nhìn và gây khó chịu.\nKhông khí sạch sẽ giúp ánh sáng hoàng hôn tỏa sáng rõ ràng và rực rỡ hơn.</string>
+    <string name="cloud_description">Ít mây: Lý tưởng cho hoàng hôn rõ ràng và không bị che khuất.\nMây trung bình: Có thể tạo hiệu ứng ánh sáng đẹp, vì các tia sáng phản chiếu trên các lớp mây.\nNhiều mây: Tránh đi vào ngày trời âm u, vì mặt trời có thể bị che hoàn toàn.</string>
+    <string name="rain_description">Tránh đi ngắm hoàng hôn khi có dự báo mưa hoặc giông bão, vì điều này không chỉ làm giảm tầm nhìn mà còn nguy hiểm.\nMặt trời thường bị che khuất hoàn toàn trong ngày mưa lớn.</string>
+    <string name="humidity_description"><![CDATA[Độ ẩm thấp hoặc trung bình (40% - 60%) là lý tưởng vì không khí thoáng đãng và dễ chịu hơn.\nĐộ ẩm cao (>70%) có thể làm không khí ngột ngạt và tạo hiện tượng sương mù, giảm tầm nhìn hoàng hôn.]]></string>
+    <string name="note">Mẹo chung:</string>
+    <string name="back_button">Back Button</string>
+    <string name="search_button">Search button</string>
+    <string name="enter_address">Nhập địa chỉ</string>
+    <string name="location_image">Location Image</string>
+    <string name="pending_button">Pending Button</string>
+    <string name="favorite_image">Favorite Image</string>
+    <string name="delete">Xóa</string>
+    <string name="edit_information">Sửa thông tin</string>
+    <string name="application_information">Thông tin ứng dụng</string>
+    <string name="empty_home_description">Bạn chưa chọn địa điểm ngắm hoàng hôn nào</string>
+    <string name="navigate_to_favorite_screen">Chuyển đến chọn địa chỉ yêu thích</string>
+    <string name="empty_list">Danh sách trống</string>
+    <string name="navigate_to_select_location_screen">Chuyển đến chọn địa chỉ</string>
+    <string name="logout_button">Logout button</string>
+    <string name="logout">Đăng xuất</string>
+    <string name="login_falied_vn">Đăng nhập thất bại</string>
+    <string name="login_failed">Login failed</string>
+    <string name="account_button">Account Button</string>
+    <string name="back_to_the_login_side">Back to the login side</string>
+    <string name="account_circle">Account circle</string>
+    <string name="prefix_password_icon">Prefix password icon</string>
+    <string name="register_success">Register Success</string>
+    <string name="register_failed">Register failed</string>
+    <string name="change_image">Đổi ảnh</string>
+    <string name="information">Các thông tin chi tiết</string>
 </resources>
