--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,16 +13,43 @@
     <string name="select_location">Chọn địa chỉ</string>
     <string name="my_favorite_locations">Địa chỉ yêu thích</string>
     <string name="setting">Cài đặt</string>
-    <string name="temperature_description">Chọn thời điểm có nhiệt độ dễ chịu (18°C - 25°C là lý tưởng).\nNếu nhiệt độ dưới 15°C, chuẩn bị áo ấm hoặc khăn choàng để tránh cảm lạnh.\nTránh đi khi nhiệt độ quá cao (trên 35°C), vì nóng bức sẽ làm bạn khó chịu và dễ mất nước.</string>
     <string name="temperature">Nhiệt độ</string>
     <string name="air_condition">Chất lượng không khí</string>
     <string name="cloud">Mây</string>
     <string name="rain">Mưa</string>
     <string name="humidity">Độ ẩm</string>
-    <string name="air_conditional_description">Tránh các ngày có chỉ số AQI trên 100 (ô nhiễm trung bình) vì bụi mịn và khí độc sẽ làm giảm tầm nhìn và gây khó chịu.\nKhông khí sạch sẽ giúp ánh sáng hoàng hôn tỏa sáng rõ ràng và rực rỡ hơn.</string>
-    <string name="cloud_description">Ít mây: Lý tưởng cho hoàng hôn rõ ràng và không bị che khuất.\nMây trung bình: Có thể tạo hiệu ứng ánh sáng đẹp, vì các tia sáng phản chiếu trên các lớp mây.\nNhiều mây: Tránh đi vào ngày trời âm u, vì mặt trời có thể bị che hoàn toàn.</string>
-    <string name="rain_description">Tránh đi ngắm hoàng hôn khi có dự báo mưa hoặc giông bão, vì điều này không chỉ làm giảm tầm nhìn mà còn nguy hiểm.\nMặt trời thường bị che khuất hoàn toàn trong ngày mưa lớn.</string>
-    <string name="humidity_description"><![CDATA[Độ ẩm thấp hoặc trung bình (40% - 60%) là lý tưởng vì không khí thoáng đãng và dễ chịu hơn.\nĐộ ẩm cao (>70%) có thể làm không khí ngột ngạt và tạo hiện tượng sương mù, giảm tầm nhìn hoàng hôn.]]></string>
+    <string name="temperature_description">
+Nhiệt độ lý tưởng để ngắm hoàng hôn nằm trong khoảng 18°C - 25°C, giúp bạn cảm thấy dễ chịu.\n
+Nếu nhiệt độ dưới 15°C, nên mặc áo ấm để tránh bị lạnh.\n
+Nếu nhiệt độ vượt quá 35°C, cần hạn chế ra ngoài vì trời quá nóng dễ gây mệt mỏi hoặc say nắng.
+</string>
+
+    <string name="air_conditional_description">
+Chỉ số chất lượng không khí (AQI) nên ở mức 1 hoặc 2 để đảm bảo không khí trong lành.\n
+Nếu AQI từ mức 3 trở lên, không khí có thể bị ô nhiễm, chứa bụi mịn và khí độc, làm giảm chất lượng ánh sáng hoàng hôn và ảnh hưởng sức khỏe.\n
+Tránh các khu vực gần khu công nghiệp hoặc vào giờ cao điểm giao thông.
+</string>
+
+    <string name="cloud_description">
+Mức độ mây ảnh hưởng lớn đến vẻ đẹp của hoàng hôn:\n
+• Dưới 30% mây: Bầu trời quang đãng, lý tưởng để ngắm hoàng hôn rõ ràng.\n
+• 30% - 70% mây: Có thể tạo ra hiệu ứng ánh sáng đẹp nhờ phản xạ ánh sáng trên mây.\n
+• Trên 70% mây: Bầu trời nhiều mây, khả năng mặt trời bị che khuất hoàn toàn.
+</string>
+
+    <string name="rain_description">
+Lượng mưa ảnh hưởng trực tiếp đến tầm nhìn hoàng hôn:\n
+• Không mưa: Điều kiện lý tưởng để ngắm hoàng hôn.\n
+• Mưa nhẹ (dưới 0.5 mm): Có thể quan sát được nhưng cần chuẩn bị che mưa.\n
+• Mưa vừa đến lớn (trên 1 mm/giờ): Tránh ra ngoài vì tầm nhìn bị hạn chế và có thể nguy hiểm nếu kèm giông bão.
+</string>
+
+    <string name="humidity_description">
+Độ ẩm lý tưởng để ngắm hoàng hôn là từ 40% đến 60%.\n
+• Độ ẩm thấp: Không khí trong lành, trời thoáng đãng.\n
+• Độ ẩm cao (trên 70%): Có thể gây cảm giác ngột ngạt và tạo sương mù, làm giảm tầm nhìn hoàng hôn.
+</string>
+
     <string name="note">Mẹo chung:</string>
     <string name="back_button">Back Button</string>
     <string name="search_button">Search button</string>
@@ -39,7 +66,7 @@
     <string name="navigate_to_select_location_screen">Chuyển đến chọn địa chỉ</string>
     <string name="logout_button">Logout button</string>
     <string name="logout">Đăng xuất</string>
-    <string name="login_falied_vn">Đăng nhập thất bại</string>
+    <string name="server_not_response">Máy chủ không phản hồi</string>
     <string name="login_failed">Login failed</string>
     <string name="account_button">Account Button</string>
     <string name="back_to_the_login_side">Back to the login side</string>
@@ -47,6 +74,21 @@
     <string name="prefix_password_icon">Prefix password icon</string>
     <string name="register_success">Register Success</string>
     <string name="register_failed">Register failed</string>
+    <string name="register_failed_vn">Đăng ký thất bại</string>
     <string name="change_image">Đổi ảnh</string>
     <string name="information">Các thông tin chi tiết</string>
+    <string name="unspecify_location">Bạn chưa chọn địa chỉ ngắm hoàng hôn nào</string>
+    <string name="navigate_to_favorite_location">Chuyển đến địa chỉ yêu thích</string>
+    <string name="favorite_locations">Favorite Locations</string>
+    <string name="map">Map</string>
+    <string name="add_location">Thêm địa chỉ</string>
+    <string name="confirm">Xác nhận</string>
+    <string name="save_location_ask">Lưu địa chỉ?</string>
+    <string name="current_location">Địa chỉ hiện tại</string>
+    <string name="cancel">Cancel</string>
+    <string name="disagree">Từ chối</string>
+    <string name="agree">Đồng ý</string>
+    <string name="accept">accept</string>
+    <string name="wrong_password_or_account">Sai thông tin đăng nhập</string>
+    <string name="collect_location_info_falied">Lấy thông tin địa chỉ thất bại</string>
 </resources>
