Refactor: Thay thế chuỗi cứng bằng string resource trong LoginScreen
- Sử dụng `stringResource` để hiển thị thông báo "Xác thực tài khoản" và "Tải danh sách địa chỉ" thay vì dùng chuỗi cứng.
- Thêm `@SuppressLint("ViewModelConstructorInComposable")` và `@SuppressLint("ConfigurationScreenWidthHeight")` để bỏ qua cảnh báo lint.
- Cập nhật phiên bản Java SDK trong `.idea/misc.xml`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,6 @@ Lượng mưa ảnh hưởng trực tiếp đến tầm nhìn hoàng hôn:\n
     <string name="tip_4">Thời gian: Đến địa điểm ngắm hoàng hôn sớm hơn ít nhất 20-30 phút để chọn vị trí và thư giãn.</string>
     <string name="take_photo">Chụp ảnh</string>
     <string name="get_photo_from_collection">Chọn ảnh từ thư viện</string>
+    <string name="validate_account">Xác thực tài khoản</string>
+    <string name="loading_location_list">Tải danh sách địa chỉ</string>
 </resources>
