Tính năng: - **Home Screen**: Thêm icon vào dialog chọn ảnh từ thư viện hoặc chụp ảnh. Đổi vị trí 2 tùy chọn trong dialog. - **Verify Code Screen**: Thêm chức năng "Gửi lại mã" và các string resource liên quan (`did_received_code`, `resend`).
Icon mới:
- `camera.xml`: Icon máy ảnh.
- `photo_library.xml`: Icon thư viện ảnh.

Xóa:
- Xóa file `TestScreen.kt` không sử dụng.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,6 @@ Lượng mưa ảnh hưởng trực tiếp đến tầm nhìn hoàng hôn:\n
     <string name="enter_verify_code">Nhập mã xác thực</string>
     <string name="hide_password">Ẩn mật khẩu</string>
     <string name="show_password">Hiện mật khẩu</string>
+    <string name="did_received_code">Không nhận được mã?</string>
+    <string name="resend">Gửi lại</string>
 </resources>
